<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    tools:context=".login.RegisterActivity">

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_register"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/sp_rectangle_login"
        android:text="@string/login"
        android:textAllCaps="false" />

    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="40dp"
        android:background="@drawable/sp_rectangle_root">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#fff"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v_separator"
            android:backgroundTint="#fff"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp" />

        <View
            android:id="@+id/v_separator"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/et_username" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/rl_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_register"
        android:background="@color/colorAccent"
        app:backgroundTint="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_arrow_forward_black_24dp" />

</RelativeLayout>
