<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".user.UserDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_studio_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:background="#4D000000"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_title2_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="40dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tv_title_ontact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:text="@string/contact"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_contact_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tv_title_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:drawableLeft="@drawable/ic_place_black_24dp"
                    android:text="@string/address"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_address_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tv_opertational_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:drawableLeft="@drawable/ic_access_time_black_24dp"
                    android:text="@string/operational"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_opertational_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/operational"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tv_equipment_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:drawableLeft="@drawable/ic_music_note_black_24dp"
                    android:text="@string/equipment"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_equipment_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/equipment"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            </TableRow>

        </TableLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="Booking"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</ScrollView>